--- a/css/responsive.css
+++ b/css/responsive.css
@@ -38,7 +38,7 @@
     font-size: 20px;
   }
   #hero-area .contents {
-    padding: 100px 0 80px;
+    padding: 140px 0 80px;
   }
   #hero-area .contents h1 {
     font-size: 18px;
